
''Beta1 released''

* Improved light map sampling in BAKECPU
* Added the support for transparencies and shadowcatcher to BAKECPU
* Fixed and optimized the execution on CPU with high thread count (24+)

''Beta2 released''

* OUTPUT_SWITCHER image pipeline plugin now supports MATERIAL_ID_COLOR, ALBEDO, AVG_SHADING_NORMAL and USER_IMPORTANCE too

''RC1 released''

### Fixed Bugs

* Fixed triangle lights back face emission when using an IES or image map profile
* Fixed OpenCL code for rotate triangle light when using IES or image map profile (BlendLuxCore iusse #310)
* Fixed light tracing when using orthographic camera
* Fixed a light intensity problem with OpenCL rendering when using a mix of materials with emission
* Fixed the support for wrap mode in image maps loaded from files
* Fixed a brightness problem when rendering large images with Metropolis sampler
* Fixed a brightness problem when rendering caustics with PhotonGI caustic cache
* Fixed a bug in Mix material OpenCL code when mixing transparent and not transparent materials
* Fixed a crash when rendering an empty scene with OpenCL and EnvLightVisibilityCache
* Fixed a problem with mesh light sources when deleting an object with LuxCore API (issue #290)
* Fixed a bug when evaluating complex tree of bump mapping nodes (issue #198)

''Beta1 released''

* BAKECPU now correctly includes the dot product of shading normal and light direction in light maps
* Fixed the generation of material/object/volume default random ID (issue #296)
* Fixed bump mapping when using a transformation with negative scale on Z (issue #300)

''Beta2 released''

* Fixed a bug in pyluxcoretools ui code causing a runtime error with PySide2 5.14.x
* Volume .photongi.enable property is now parsed/exported and supported
* Fixed a problem in RTPATHOCL preview phase (issue #305)

''RC1 released''

* Fixed a numerical precision problem on some very large scene (issue #308)
