@@ -11,7 +11,7 @@ film.height = 1024
 # 2) noise under 0.015
 #
 batch.haltspp = 512
-#batch.haltspp = 32
+#batch.haltspp = 128
 batch.haltnoisethreshold = 0.03
 ################################################################################
 # To bake also material transparency on the map Alpha channel, you
@@ -52,22 +52,22 @@ film.imagepipelines.1.0.type = NOP
 # will have high resolution maps.
 #
 # Set the minimum size of the baked map when "autosize" option is enabled
-bake.minmapautosize = 1024
-#bake.minmapautosize = 128
+#bake.minmapautosize = 1024
+bake.minmapautosize = 256
 # Set the maximum size of the baked map when "autosize" option is enabled
-bake.maxmapautosize = 2048
-#bake.maxmapautosize = 512
+#bake.maxmapautosize = 2048
+bake.maxmapautosize = 512
 # Tell "autosize" option to use power of 2 size (for later usage with glTF,
 # OpenGL, Vulkan, etc.)
 bake.powerof2autosize.enable = 1
 # Set if I have to skip baked map rendering if the map file already
 # exists. Useful to restart interrupted bake renderings from.
-bake.skipexistingmapfiles = 1
+#bake.skipexistingmapfiles = 1
 ################################################################################
 # List of bake maps to render
 #
 # Type of bake map to render: COMBINED or LIGHTMAP
-bake.maps.0.type = "COMBINED"
+bake.maps.0.type = "LIGHTMAP"
 # Name of the bake map file
 bake.maps.0.filename = "1398588469529680.exr"
 # Index of the image pipeline to use for the output
@@ -82,7 +82,7 @@ bake.maps.0.uvindex = 0
 # A space separated list of scene objects names to bake (see the .scn file)
 bake.maps.0.objectnames = "1398588469529680"
 ################################################################################
-bake.maps.1.type = "COMBINED"
+bake.maps.1.type = "LIGHTMAP"
 bake.maps.1.filename = "1398577149045840.exr"
 bake.maps.1.imagepipelineindex = 1
 bake.maps.1.autosize.enabled = 1
@@ -91,7 +91,7 @@ bake.maps.1.height = 512
 bake.maps.1.uvindex = 0
 bake.maps.1.objectnames = "1398577149045840"
 ################################################################################
-bake.maps.2.type = "COMBINED"
+bake.maps.2.type = "LIGHTMAP"
 bake.maps.2.filename = "1398577164380240.exr"
 bake.maps.2.imagepipelineindex = 1
 bake.maps.2.autosize.enabled = 1
