@@ -1,7 +1,7 @@
 renderengine.type = "PATHCPU"
 sampler.type = "SOBOL"
-film.width = 1920
-film.height = 1080
+film.width = 960
+film.height = 540
 film.imagepipelines.0.0.type = "NOP"
 film.imagepipelines.0.1.type = "TONEMAP_LINEAR"
 film.imagepipelines.0.1.scale = 1
