@@ -14,8 +14,8 @@ sampler.metropolis.maxconsecutivereject = 512
 sampler.metropolis.imagemutationrate = 0.10000000000000001
 renderengine.type = "PATHCPU"
 sampler.type = "SOBOL"
-film.width = 1920
-film.height = 1080
+film.width = 960
+film.height = 540
 film.filter.type = "BLACKMANHARRIS"
 film.filter.width = 1.5
 lightstrategy.type = "LOG_POWER"
