@@ -267,7 +267,8 @@ void BakeCPURenderThread::RenderEyeSample(const BakeMapInfo &mapInfo, PathTracer
 				const Vector localSampledDir = UniformSampleHemisphere(u1, u2);
 				const Vector sampledDir = bsdf.GetFrame().ToWorld(localSampledDir);
 
-				pathInfo.AddVertex(bsdf, DIFFUSE | REFLECT, UniformHemispherePdf(u1, u2), pathTracer.hybridBackForwardGlossinessThreshold);
+				const float samplePdf = UniformHemispherePdf(u1, u2);
+				pathInfo.AddVertex(bsdf, DIFFUSE | REFLECT, samplePdf, pathTracer.hybridBackForwardGlossinessThreshold);
 
 				// Ray origin
 				const Point rayOrig = bsdf.GetRayOrigin(sampledDir);
@@ -282,7 +283,7 @@ void BakeCPURenderThread::RenderEyeSample(const BakeMapInfo &mapInfo, PathTracer
 
 				const float NdotL = Dot(bsdf.hitPoint.shadeN, sampledDir);
 				pathTracer.RenderEyePath(state.device, state.scene,
-						state.eyeSampler, pathInfo, eyeRay, Spectrum(NdotL),
+						state.eyeSampler, pathInfo, eyeRay, Spectrum(NdotL * INV_PI / samplePdf),
 						state.eyeSampleResults);
 			}
 			break;
